reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__generic_struct_repr_transparent_partially_generic-2.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "super :: into_typescript_code :: < TestStruct<u8> > ()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:

export function client(base: string | Client): __definition.Interface {
  return __implementation.__client(base);
}

export namespace __definition {
  export interface Interface {
    inout_test: (
      input: Record<string, number /* u8 */>,
      headers: {},
      options?: RequestOptions,
    ) => AsyncResult<Record<string, number /* u8 */>, {}>;
  }
}
export namespace reflectapi {
  /**
   * Struct object with no fields
   */
  export interface Empty {}

  /**
   * Error object which is expected to be never returned
   */
  export interface Infallible {}
}

namespace __implementation {

  function inout_test(client: Client) {
    return (
      input: Record<string, number /* u8 */>,
      headers: {},
      options?: RequestOptions,
    ) =>
      __request<
        Record<string, number /* u8 */>,
        {},
        Record<string, number /* u8 */>,
        {}
      >(client, "/inout_test", input, headers, options);
  }
}
