reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__generic_struct_repr_transparent_partially_generic.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: schema
---
{
  "name": "",
  "functions": [
    {
      "name": "inout_test",
      "path": "",
      "input_type": {
        "name": "std::collections::HashMap",
        "arguments": [
          {
            "name": "std::string::String"
          },
          {
            "name": "u8"
          }
        ]
      },
      "output_kind": "complete",
      "output_type": {
        "name": "std::collections::HashMap",
        "arguments": [
          {
            "name": "std::string::String"
          },
          {
            "name": "u8"
          }
        ]
      },
      "serialization": [
        "json",
        "msgpack"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Empty",
        "description": "Struct object with no fields",
        "fields": "none"
      },
      {
        "kind": "primitive",
        "name": "std::collections::HashMap",
        "description": "Key-value map type",
        "parameters": [
          {
            "name": "K"
          },
          {
            "name": "V"
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Infallible",
        "description": "Error object which is expected to be never returned",
        "fields": "none"
      },
      {
        "kind": "primitive",
        "name": "std::collections::HashMap",
        "description": "Key-value map type",
        "parameters": [
          {
            "name": "K"
          },
          {
            "name": "V"
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  }
}
